# VedioCaptor

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: tech.md
presets/: clear_demo.lua  custom_steps.lua  emoji_make.lua  emoji_small.lua
src/: App.vue  api.ts  utils.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_presets.rs  execute_commands.rs  ffmpeg_commands.rs  ffmpeg_runner.rs  lib.rs  lua_runtime.rs  main.rs  pipeline_executor.rs  preview_commands.rs  types.rs
src/components/: CropOverlay.vue  FileSelector.vue  ParamPanel.vue  PresetParamPanel.vue  PresetSelector.vue  ProgressView.vue  ResultView.vue  TimeRangeSlider.vue
submit/: test-agent-a.sh  test-agent-b.sh  test-agent-c.sh  test-agent-d.sh  test-agent-e.sh  test-agent-f.sh  test-agent-g.sh  test-agent-h.sh  test-agent-i.sh  test-agent-j.sh  test-log.sh  test-name.sh  test-slider.sh
tools/: check.sh  prepare-ffmpeg-resource.cjs  run.sh
